Working on Send-regitration-email API
